    * Music and sound effects can be previewed everywhere in
      Custom by hitting Enter [Ralph]
    * New general bitset "Don't randomize battle ready meters" [James]
    * New attack bitset "Delay doesn't block further actions" allows
      attacks to be queued without blocking the attacker from taking
      other actions [James]

  * Bugfixes
    * Bug 749:  Attacks configured to do No Damage still do damage when
      used outside battle [James]
    * Bug 819: %-based attacks don't heal outside of battle [James]
    * Bug 9: Elemental strength/weakness/absorbtion is not yet applied
      to spells used outside of battle. [James]
    * Fixed a case where "add hero" could add more heroes than you
      are supposed to be able to have under certain conditions [James]
    * Bug 833: Screen temporarily freezes right after canceling an
      out-of-battle cure attack or item [James]
    * Bug 486: Chained attacks fail on stored dead targets
      [James, msw188]
    * "wait for all" did not wait for NPCs when it was meant to [Ralph]
    * "hero pixel x/y" only worked correctly on the leader [Ralph]
    * Using an item that triggers a text box could cause a menu
      double-close warning if the menu item that opened the items menu
      was set to always close the menu [James]
    * Bug 845: upgrading old games that contain no shop stuff lump
      always produced a confusing warning [James]
    * Under Unix you usually couldn't play unlumped .rpgdir games which
      were on a mounted filesystem other than the one containing your
      home directory [Ralph]
    * Sound effects did not stop when quitting to the title screen or
      loading a game [Ralph]
    * 'Set tag', 'Toggle tag' and 'Close menu' options were ignored
      when menu items were triggered via "use menu item" [Ralph]
    * NPCs appearance was not updated according to tags set from a
      menu item or from the tag debug menu [Ralph]