@@ -16,6 +16,10 @@ and check the buglist:
 http://hamsterrepublic.com/ohrrpgce/index.php/Bugzilla.html
 ------------------------------------------------------------------------------
 
+2010-10-17:
+The default graphics backend on Windows is now gfx_directx instead of gfx_sdl
+so please, please report any problems -- even minor annoyances!
+
 2010-07-03:
 One of the bugs (now fixed) in the new save files wiped the gameover and
 loadgame script settings when loading a save. This means if you've saved a
