@@ -4,7 +4,8 @@ To build both game and custom with the default backends, just run:
   scons
 
 You can specify different gfx backends by adding gfx= to the command line.
-You can specify multiple gfx backends. sdl+fb is the default.
+You can specify multiple gfx backends. sdl+fb is the default under Unix,
+and directx+sdl+fb is the default under Windows.
 You can specify different music backends by adding music= to the command line.
 Only one music backend at a time is allowed. sdl is the default.
 
