@@ -31,6 +31,13 @@ WHAT IS NEW?
     * New attack bitset "Delay doesn't block further actions" allows
       attacks to be queued without blocking the attacker from taking
       other actions [James]
+    * Jay Tennant's gfx_directx is now the default graphics backend
+      under Windows (automatic fallback to gfx_sdl on old computers).
+      Click the window icon to access gfx_directx's Options menu, and
+      drag the edges of the window to change zoom!
+    * gfx_directx input rewrite: adds joystick support, normal mouse
+      speed/acceleration, removes forced mouse clipping and adds
+      "mouse region" support [Jay]
 
   * Bugfixes
     * Bug 749:  Attacks configured to do No Damage still do damage when
@@ -61,6 +68,8 @@ WHAT IS NEW?
     * NPCs appearance was not updated according to tags set from a
       menu item or from the tag debug menu [Ralph]
     * "create NPC" could create NPCs with garbage 'extra data' [Ralph]
+    * gfx_directx: fixed garbage and window resizing at startup [Jay]
+    * gfx_directx: fixed slow screen fades and framerate [Jay]
 
   * New Plotscripting Stuff
     * You may no longer used the characters ", $ or = in script and
